Added GeoShape indexing and querying support
Former-commit-id: bea4346f3acc546736efa824f556cf334e88e064

--- a/pom.xml
+++ b/pom.xml
@@ -153,6 +153,20 @@
         <!-- END: dependencies that are shaded -->
 
         <dependency>
+            <groupId>com.spatial4j</groupId>
+            <artifactId>spatial4j</artifactId>
+            <version>0.2</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.vividsolutions</groupId>
+            <artifactId>jts</artifactId>
+            <version>1.12</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
             <version>1.2.16</version>
