Use bloom filter when flushing (applying deletes), closes #2058.
Former-commit-id: 2b893fe1e54ee35bdddc1881d96fc831e617d630

--- a/pom.xml
+++ b/pom.xml
@@ -374,6 +374,28 @@
                 </configuration>
             </plugin>
             <plugin>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.5</version>
+                <executions>
+                    <execution>
+                        <id>copy-resources</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/bin</outputDirectory>
+                            <resources>
+                                <resource>
+                                    <directory>${basedir}/bin</directory>
+                                    <filtering>true</filtering>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <version>2.3</version>
                 <configuration>
@@ -436,7 +458,8 @@
                                     </mapper>
                                 </data>
                                 <data>
-                                    <src>${project.basedir}/bin</src>
+                                    <!-- use the filtered one from the resources plugin -->
+                                    <src>${project.build.directory}/bin</src>
                                     <type>directory</type>
                                     <excludes>*.bat, .DS_Store</excludes>
                                     <mapper>
