remove mail notifications (for now) from travis
Former-commit-id: e7d0217b112a1a302f8896400843183a8775afa4

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,6 @@ env:
   - ES_TEST_LOCAL=true
   - ES_TEST_LOCAL=false
   - ES_TEST_LOCAL=false ES_TEST_COMPRESS=true
+
+notifications:
+  email: false
