--- a/pom.xml
+++ b/pom.xml
@@ -527,7 +527,7 @@
                                 </data>
                                 <data>
                                     <src>${project.build.directory}/lib</src>
-                                    <includes>lucene*, log4j*, jna*, snappy-java-*</includes>
+                                    <includes>lucene*, log4j*, jna*, snappy-java-*, spatial4j*, jts*</includes>
                                     <type>directory</type>
                                     <mapper>
                                         <type>perm</type>
