--- a/pom.xml
+++ b/pom.xml
@@ -119,7 +119,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
-            <version>2.0.4</version>
+            <version>2.0.5</version>
             <scope>compile</scope>
         </dependency>
 
@@ -131,9 +131,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.yaml</groupId>
-            <artifactId>snakeyaml</artifactId>
-            <version>1.6</version>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-yaml</artifactId>
+            <version>2.0.5</version>
             <scope>compile</scope>
         </dependency>
 
@@ -344,7 +344,7 @@
                             <include>org.mvel:mvel2</include>
                             <include>com.fasterxml.jackson.core:jackson-core</include>
                             <include>com.fasterxml.jackson.dataformat:jackson-dataformat-smile</include>
-                            <include>org.yaml:snakeyaml</include>
+                            <include>com.fasterxml.jackson.dataformat:jackson-dataformat-yaml</include>
                             <include>joda-time:joda-time</include>
                             <include>io.netty:netty</include>
                             <include>com.ning:compress-lzf</include>
@@ -374,10 +374,6 @@
                         <relocation>
                             <pattern>com.fasterxml.jackson</pattern>
                             <shadedPattern>org.elasticsearch.common.jackson</shadedPattern>
-                        </relocation>
-                        <relocation>
-                            <pattern>org.yaml</pattern>
-                            <shadedPattern>org.elasticsearch.common.yaml</shadedPattern>
                         </relocation>
                         <relocation>
                             <pattern>org.joda</pattern>
