exclude xerces from the deps for jts, we don't need it
Former-commit-id: a80639abf5ce9a1b41139ef24b465c93e0c25ce0

--- a/pom.xml
+++ b/pom.xml
@@ -164,6 +164,12 @@
             <artifactId>jts</artifactId>
             <version>1.12</version>
             <scope>compile</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>xerces</groupId>
+                    <artifactId>xercesImpl</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
