upgrade to latest sdk
Former-commit-id: 8220546fd9f705426b2e59493b18ffcf510694e2

--- a/pom.xml
+++ b/pom.xml
@@ -52,13 +52,22 @@
         <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-java-sdk</artifactId>
-            <version>1.3.11</version>
+            <version>1.3.18</version>
             <scope>compile</scope>
             <exclusions>
                 <!-- We need to exclude httpclient, since it pulls the wrong version -->
                 <exclusion>
                     <groupId>org.apache.httpcomponents</groupId>
                     <artifactId>httpclient</artifactId>
+                </exclusion>
+                <!-- jackson is optional -->
+                <exclusion>
+                    <groupId>org.codehaus.jackson</groupId>
+                    <artifactId>jackson-core-asl</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.codehaus.jackson</groupId>
+                    <artifactId>jackson-mapper-asl</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
