move spatial4j and jts to be optional dependencies allowing data and client nodes to work without them, disabling shapes if needed
Former-commit-id: 6c3847b0a9ec11b8feb9b54a76674ee3ec5f5f9c

--- a/pom.xml
+++ b/pom.xml
@@ -157,6 +157,7 @@
             <artifactId>spatial4j</artifactId>
             <version>0.2</version>
             <scope>compile</scope>
+            <optional>true</optional>
         </dependency>
 
         <dependency>
@@ -164,6 +165,7 @@
             <artifactId>jts</artifactId>
             <version>1.12</version>
             <scope>compile</scope>
+            <optional>true</optional>
             <exclusions>
                 <exclusion>
                     <groupId>xerces</groupId>
