--- a/pom.xml
+++ b/pom.xml
@@ -112,7 +112,7 @@
         <dependency>
             <groupId>org.mvel</groupId>
             <artifactId>mvel2</artifactId>
-            <version>2.1.Beta8</version>
+            <version>2.1.1.Final</version>
             <scope>compile</scope>
         </dependency>
 
