lucene 4: upgrade analyzers
Former-commit-id: 05138bb2fbbf38a1c1e14469dcf33f8e857f5adf

--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.lucene</groupId>
-            <artifactId>lucene-analyzers</artifactId>
+            <artifactId>lucene-analyzers-common</artifactId>
             <version>${lucene.version}</version>
             <scope>compile</scope>
         </dependency>
