lucene 4: add codes dependency
Former-commit-id: a4d0e3a0e8fa29f127edb46ed74f12ba6a712ba1

--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,12 @@
         </dependency>
         <dependency>
             <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-codecs</artifactId>
+            <version>${lucene.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
             <artifactId>lucene-queries</artifactId>
             <version>${lucene.version}</version>
             <scope>compile</scope>
