Indexing Slow Log closes #2457
Former-commit-id: a2a8553faf2cc02d8ab2ccd5099c296770d4d7e3

--- a/config/elasticsearch.yml
+++ b/config/elasticsearch.yml
@@ -338,7 +338,6 @@
 
 # Shard level query and fetch threshold logging.
 
-#index.search.slowlog.level: TRACE
 #index.search.slowlog.threshold.query.warn: 10s
 #index.search.slowlog.threshold.query.info: 5s
 #index.search.slowlog.threshold.query.debug: 2s
@@ -348,6 +347,11 @@
 #index.search.slowlog.threshold.fetch.info: 800ms
 #index.search.slowlog.threshold.fetch.debug: 500ms
 #index.search.slowlog.threshold.fetch.trace: 200ms
+
+#index.indexing.slowlog.threshold.index.warn: 10s
+#index.indexing.slowlog.threshold.index.info: 5s
+#index.indexing.slowlog.threshold.index.debug: 2s
+#index.indexing.slowlog.threshold.index.trace: 500ms
 
 ################################## GC Logging ################################
 
